# Visualization_DSAA

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  test.cpp
docs/: how.md
dsaa/: CMakeLists.txt
dsaa/Achievements/: CMakeLists.txt
dsaa/Achievements/Find/: CMakeLists.txt  findcanvas.cpp  findcanvas.h  findnodeitem.cpp  findnodeitem.h  findview.cpp  findview.h  findviewlog.cpp  findviewlog.h
dsaa/Achievements/Graph/: CMakeLists.txt  graph_view.cpp  graph_view.h  graphcanvas.cpp  graphcanvas.h  mycanvas.cpp  mycanvas.h
dsaa/Achievements/Greed/: CMakeLists.txt  greedcanvas.cpp  greedcanvas.h  greedview.cpp  greedview.h  greedyviewlog.cpp  greedyviewlog.h
dsaa/Achievements/Linear/: CMakeLists.txt  base_list.cpp  base_list.h  doubly_linked_list.cpp  doubly_linked_list.h  lineardatafactory.cpp  lineardatafactory.h  linkedlistcavnas.cpp  linkedlistcavnas.h  linkedlistnodeitem.cpp  linkedlistnodeitem.h  linkedlistview.cpp  linkedlistview.h  linkedlistviewlog.cpp  linkedlistviewlog.h
dsaa/Achievements/Sort/: BubbleSort.cpp  BubbleSort.h  CMakeLists.txt  InsertionSort.cpp  InsertionSort.h  MainCanvas.cpp  MainCanvas.h  QuickSort.cpp  QuickSort.h  SelectionSort.cpp  ShellSort.cpp  SortCanvas.cpp  SortCanvas.h  SortFactory.cpp  SortFactory.h  SortObject.cpp  SortObject.h  sortviewlog.cpp  sortviewlog.h
dsaa/Achievements/Staque/: CMakeLists.txt  queue.cpp  queue.h  stack.cpp  stack.h  staquecanvas.cpp  staquecanvas.h  staquenodeitem.cpp  staquenodeitem.h  staqueview.cpp  staqueview.h  staqueviewlog.cpp  staqueviewlog.h
dsaa/Achievements/Tree/: CMakeLists.txt  bsearchtree.cpp  bsearchtree.h  bsearchtreecanvas.cpp  bsearchtreecanvas.h  bsearchtreenodeitem.cpp  bsearchtreenodeitem.h  bsearchtreeview.cpp  bsearchtreeview.h  bsearchtreeviewlog.cpp  bsearchtreeviewlog.h
dsaa/Components/: CMakeLists.txt  bigIconButton.h  customIcon.cpp  customIcon.h  customScrollContainer.cpp  framelesswindow.cpp  framelesswindow.h  horizontalValueAdjuster.cpp  pagewidget.cpp  pagewidget.h  pushbutton.h  sidebar.cpp  sidebar.h  singleSelectGroup.cpp  singleSelectGroup.h  slidepage.cpp  slidepage.h  spinbox.cpp  spinbox.h  textButton.cpp  textButton.h  textInputItem.cpp  textInputItem.h
dsaa/Pages/: CMakeLists.txt  aboutpage.cpp  aboutpage.h  bstreepage.cpp  bstreepage.h  findpage.cpp  findpage.h  graphpage.cpp  graphpage.h  greedpage.cpp  greedpage.h  linkedlistpage.cpp  linkedlistpage.h  linklistpage.h  sortpage.cpp  sortpage.h  staquepage.cpp  staquepage.h
dsaa/Sort/: BubbleSort.cpp  BubbleSort.h  CMakeLists.txt  InsertionSort.cpp  MainCanvas.cpp  MainCanvas.h  QuickSort.cpp  SelectionSort.cpp  SelectionSort.h  ShellSort.cpp  ShellSort.h  SortFactory.h  SortObject.h  SortTask.cpp  SortTask.h
dsaa/Utils/: fontawesomeicons.cpp  fontawesomeicons.h
dsaa/Windows/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
dsaa/conponents/: CMakeLists.txt  bigIconButton.cpp  customIcon.h  customScrollContainer.h  framelesswindow.cpp  horizontalValueAdjuster.h  lineeditwidget.cpp  lineeditwidget.h  pushbutton.cpp  sidebar.cpp  textButton.h  textInputItem.h
dsaa/graph/: CMakeLists.txt  mycanvas.cpp  mycanvas.h
dsaa/utils/: CMakeLists.txt  common.h  logger.cpp  logger.h
dsaa/widgets/: CMakeLists.txt  aboutpage.cpp  aboutpage.h  customWidgets.cpp  customWidgets.h  graphpage.h  homepage.cpp  homepage.h  mainwindow.cpp  mainwindow.h  slidepage.cpp  slidepage.h  sortpage.cpp  sortpage.h
